--- a/app/assets/stylesheets/osem.css.scss
+++ b/app/assets/stylesheets/osem.css.scss
@@ -467,3 +467,7 @@ p.comment-body {
       display: block;
   }
 }
+
+.dropdown-footer {
+  margin-top: 20px;
+}
